<resources>
    <string name="app_name">Iron Stock</string>

    <string name="default_exception_title">Erro!</string>
    <string name="default_exception_description">Ocorreu um erro inesperado, por favor contate o suporte.</string>
    <string name="exception_type_prefix">Nome Erro: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="equip_view_activity_title">Equipamento</string>

    <string name="equip_selected_not_found_toast">Equipamento selecionado não encontrado, favor entrar em contato com o suporte.</string>

    <string name="equip_date_of_acquistion_view">Data da Aquisição: %s</string>
    <string name="equip_original_value_view">Valor Original: R$ %.2f</string>
    <string name="equip_current_value_view">Valor Atual R$ %.2f</string>
    <string name="equip_depreciation_view">Depreciação de: %.2f</string>
    <string name="equip_durability_view">Durabilidade: %.2f</string>
    <string name="no_reports_found">Nenhum relatório encontrado</string>
    <string name="insert_report">Cadastrar Relatório</string>
    <string name="copyright">Copyright 2025₢</string>
    <string name="about_us">Sobre Nós</string>
    <string name="about_us_content">Somos dedicados a gerência dos equipamentos de academia tendo como visão diminuir custos desnecessários que poderiam ser causados por desconhecimento e falta de informações. Sempre estaremos dispostos a melhorar nossos serviços e oferecer qualidade aos nossos clientes.</string>
    <string name="thanks_for_the_preference">Obrigado pela preferência.</string>
    <string name="login_btn">Entrar</string>
    <string name="pwd_hint">Senha</string>
    <string name="usr_hint">Usuario</string>
    <string name="report_pending_text">Pending</string>
    <string name="report_approved_text">Pending</string>
    <string name="report_user">Reportado por %s</string>
    <string name="report_date">Reportado em %s</string>
    <string name="report_details">Total of %d Equipments reported</string>
</resources>