<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".telas.PrincipalActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPrincipalActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:title="@string/app_name"
                app:titleTextColor="?android:textColorPrimary" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerPrincipal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </androidx.viewpager2.widget.ViewPager2>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlPrincipalItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:elevation="0dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/drawer_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/drawer_header"
            app:menu="@menu/drawer_menu" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_principal_aboutus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColor"
                    android:contentDescription=""
                    android:drawableLeft="@drawable/baseline_info_24"
                    android:gravity="start|center_vertical"
                    android:text="@string/about_us" />
                <TextView
                    android:layout_weight="0"
                    android:id="@+id/aboutUsMenuItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
        

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>